--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-loading-screen": "0.0.17",
     "react-parallax": "^3.2.1",
     "react-scripts": "4.0.3",
+    "typewriter-effect": "^2.17.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
